codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_ctrl_d_quit_running.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ctrl + d again to quit                                                        "
